# t3-clone

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  diesel.toml  docker-compose.yml
.kamal/: secrets
config/: deploy.example.yml  deploy.yml  example-deploy.yaml
configuration/: local.yaml  production.yaml
frontend/: .dockerignore  package.json  vite.config.ts
frontend/app/: app.css  root.tsx  routes.ts
migrations/2025-06-08-134354_create_users_table/: up.sql
migrations/2025-06-08-144047_create_sessions_table/: up.sql
migrations/2025-06-08-155500_create_chats_table/: up.sql
migrations/2025-06-08-155508_create_messages_table/: up.sql
migrations/2025-06-08-181808_create_replicache_client_table/: down.sql  up.sql
migrations/2025-06-08-181812_create_replicache_client_group_table/: down.sql  up.sql
migrations/2025-06-10-074310_create_active_models_table/: up.sql
migrations/2025-06-12-184134_create_api_keys_table/: up.sql
migrations/2025-06-16-095219_create_shared_chats_table/: down.sql  up.sql
migrations/2025-06-16-095226_create_shared_messages_table/: down.sql  up.sql
settings/: local.yaml
src/: app.rs  auth.rs  configuration.rs  jobs.rs  lib.rs  main.rs  routes.rs  schema.rs  telemetry.rs
src/ai/: google.rs  handler.rs  mod.rs  openai.rs  provider.rs  reasoning.rs
src/dtos/: active_model.rs  api_key.rs  chat.rs  message.rs  mod.rs  shared_chat.rs  user.rs
src/handlers/: api_key.rs  auth.rs  mod.rs  replicache.rs  shared_chat.rs  sse.rs
src/infra/: db.rs  redis.rs
src/middleware/: auth.rs
src/models/: chat.rs  (+11 more)
(+87 files in other folders)
