[package]
name = "t3-clone"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
config = "0.15.11"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.7.0"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
