[package]
name = "t3-clone"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"]}
config = "0.15.11"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.7.0"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
diesel = { version = "2.2.10", features = ["mysql", "r2d2", "chrono"] }
chrono = { version = "0.4.41", features = ["serde"] }
argon2 = { version = "0.5.3", features = ["std"] }
anyhow = "1.0.98"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
tower-sessions-redis-store = "0.16.0"
tower = "0.5.2"
tower-sessions = { version = "0.14.0", features = ["signed"] }
tower_governor = "0.7.0"
tower-http = { version = "0.6.6", features = ["fs", "trace", "cors", "timeout"] }
itertools = "0.14.0"
serde_json = "1.0.140"
futures = "0.3.31"



